add basic support to address book
